# pde_analysis

./: pyproject.toml
.github/: copilot-instructions.md
configs/: 1Dz_IC_x0=0_LSODA.yaml  1Dz_IC_x0=5_mixed.yaml  1gauss_1Dz_IC_LSODA.yaml  1gauss_default_IC_var2_LSODA.yaml  1gauss_default_IC_x0=0_LSODA.yaml  default_IC_x0=0_LSODA.yaml  default_IC_x0=0_RK200.yaml  default_IC_x0=0_RK400.yaml  default_IC_x0=5_LSODA.yaml  one_decay_2d.yaml  one_decay_2d_IC_x0=0.yaml  one_decay_2d_x0=5_w0x=0.5.yaml
docs/: architecture.md
notebooks/: 1D_growth_rate.py  comparsion_a_s.py  max_growth_rate_calc.py  metrics_from_db.py  profile_viewer_exp.py  pump_profile.py  residuals_view.py  test.py
notebooks/1D_2D/: profile_viewer_1D_2D.py
notebooks/1Dx/h5/: bunch_view_1d.py  bunch_view_1d.py.tmp  comparsion.py  growth_rate_study_1d.py  profile_viewer_1d.py
notebooks/2D/db/: ZtoZ0_study.py  comparison_two_series.py  db_dashboard.py  growth_rate_study.py  max_growth_rate_calc.py  timeseries_from_db.py
notebooks/2D/h5/: bunch_view.py  comparsion2.py  comparsion_a_s.py  profile_viewer.py  profile_viewer_exp.py  sol_viewer.py
notebooks/__marimo__/session/: 1D_growth_rate.py.json  ZtoZ0_study.py.json  bunch_view.py.json  bunch_view_1d.py.json  comparsion_a_s.py.json  growth_rate_study.py.json  growth_rate_study_1d.py.json  growth_rate_study_copy.py.json  max_growth_rate_calc.py.json  metrics_from_db.py.json  (+9 more)
scripts/: load_folder.py  test_pipeline.py
src/pde_analysis/: analysis.py  io_dat.py  load_h5_solver_file.py  print_summary.py  residuals.py
tests/: test_series_analysis.py
(+37 files in other folders)
