[project]
name = "pde_analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "git-filter-repo>=2.47.0",
    "h5py>=3.16.0",
    "marimo>=0.22.0",
    "matplotlib>=3.10.8",
    "PyYAML>=6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "sqlite-utils>=3.39",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
